@@ -1,3 +1,14 @@
+Tue Nov 30 09:55:39 UTC 2010  Marijke Hengstmengel <mhengstmengel@remedy.nl>
+
+        * connectors/dds4ccm/tests/MultipleTemp/Sender/MultipleTemp_Sender_exec.cpp:
+        * connectors/dds4ccm/tests/MultipleTemp/Sender/MultipleTemp_Sender.idl:
+        * connectors/dds4ccm/tests/MultipleTemp/Sender/MultipleTemp_Sender_exec.h:
+        * connectors/dds4ccm/tests/MultipleTemp/Receiver/MultipleTemp_Receiver_exec.h:
+        * connectors/dds4ccm/tests/MultipleTemp/Receiver/MultipleTemp_Receiver_exec.cpp:
+        * connectors/dds4ccm/tests/MultipleTemp/Receiver/MultipleTemp_Receiver.idl:
+        * connectors/dds4ccm/tests/MultipleTemp/Connector/MultipleTemp_Connector.idl:
+        Implementation test.
+
 Tue Nov 30 12:50:54 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/tests/DDSEntity/Receiver/Writer_Receiver.mpc:
